# MenuWire

./: .env-example  .gitignore  README.md  docker-compose.app.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.public.yml  docker-compose.yml  package-lock.json
.github/workflows/: docker-publish.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite3  manage.py  pyproject.toml
backend/menuwire/: asgi.py  settings.py  urls.py  wsgi.py
backend/restaurants/: admin.py  apps.py  consumers.py  forms.py  middleware.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/restaurants/management/commands/: populate_db.py
backend/restaurants/migrations/: 0001_initial.py  0002_alter_restaurant_logo.py  0003_remove_orderitem_options_orderitem_options.py
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/messages/: en.json  nl.json  zh.json
frontend/src/app/: custom.css  globals.css  landingpage.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard-demo/: page.tsx
frontend/src/app/lib/: api.ts  types.ts  utils.ts
frontend/src/app/order-demo/: loading.tsx  page.tsx
frontend/src/components/Dashboard/: Dashboard.tsx  DashboardNavbar.tsx  Login.tsx  OrderView.tsx  Settings.tsx
frontend/src/data/: mockData.ts
frontend/src/hooks/: useConfirm.tsx  useToast.tsx
frontend/src/i18n/: config.ts
nginx/: nginx.bootstrap.conf  nginx.local.conf  nginx.public.conf
notes/: backend_notes.md  certbot.md  next_RCE.md
(+7 files in other folders)
